Another favicon try

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>Ian Rule's Portfolio</title>
 
     <!-- logos -->
-    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/assets/images/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/apple-touch-icon.png">
 
     <!-- linking CSS -->
