Initial integration of CMS

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor/slick.css">
         <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor/slick-theme.css">
         <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor/aos.css">
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 
         <!-- plugins -->
         <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/plugins/feature.css">
